# zanzibar

./: CHANGELOG.md  LICENSE  README.md  Zanzibar.cabal
app/Core/: Types.hs
zanzibar/: Main.hs  playground.hs
zanzibar/Core/: Config.hs  Logic.hs  Types.hs  Util.hs  View.hs
